--- a/compose.yml
+++ b/compose.yml
@@ -15,4 +15,7 @@ services:
       NODE_ENV: production
     ports:
       - 8080:8080
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
 
