--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1"
@@ -22,10 +20,13 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.2.0"
   }
 }
